--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,9 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.snippets
 
+plugins:
+  - tags
+
 nav:
   - Home: index.md
   - Hackviser:
