--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,8 +26,9 @@ plugins:
 nav:
   - Home: index.md
   - Hackviser:
-    - Coming Soon: hackviser/index.md
+    - Scenarios and Labs: hackviser/index.md
   - Hack The Box:
     - Coming Soon: hackthebox/index.md
   - TryHackMe:
     - Coming Soon: tryhackme/index.md
+  - Tags: tags.md
