Update config file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: CTF articles by humbledragon669
-site_description: Writups for CTF challenges and security labs
+site_name: Offense, Defense, and Everything Between
+site_description: Notes and write-ups by humbledragon669
 site_author: janekpstudentad
 
 theme:
